--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ BMI Calculator/.vs/BMI Calculator/v17/ipch/AutoPCH/20872d7e16ef6b0b/BMI CALCULAT
 *.json
 BMI Calculator/.vs/BMI Calculator/v17/.suo
 *.vsidx
+BMI Calculator/.vs/BMI Calculator/v17/Solution.VC.db
