First Python Push

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ BMI Calculator/.vs/BMI Calculator/v17/ipch/AutoPCH/20872d7e16ef6b0b/BMI CALCULAT
 BMI Calculator/.vs/BMI Calculator/v17/.suo
 *.vsidx
 BMI Calculator/.vs/BMI Calculator/v17/Solution.VC.db
+DNA Sequencer Project/.vs/DNA Sequencer Project/v17/.suo
+*.pyproj
+*.sln
